crates/keron-lang/tests/corpus/errors/parse/double_comma_list.snap
---
source: crates/keron-lang/tests/harness/mod.rs
assertion_line: 75
---
error: found ',' expected something else, '#', '-', '"', '"true"', '"false"', '"null"', int, '[', '{', '"if"', '"for"', '"match"', identifier, '(', or ']'
  --> 1:14
  |
1 | val xs = [1, , 2]
  |              ^
